--- a/mocksocks-gui/src/main/java/com/dianping/mocksocks/gui/Main.form
+++ b/mocksocks-gui/src/main/java/com/dianping/mocksocks/gui/Main.form
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.dianping.mocksocks.gui.Main">
-  <grid id="27dc6" binding="panel" layout-manager="GridBagLayout">
+  <grid id="27dc6" binding="panel" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+    <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="500" height="399"/>
     </constraints>
@@ -11,45 +12,38 @@
       <color color="-16777216"/>
     </border>
     <children>
-      <grid id="269f7" layout-manager="GridBagLayout">
-        <constraints>
-          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-          <gridbag weightx="0.0" weighty="0.0"/>
-        </constraints>
-        <properties/>
-        <border type="none"/>
-        <children/>
-      </grid>
-      <hspacer id="78b42">
-        <constraints>
-          <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-          <gridbag weightx="0.0" weighty="0.0"/>
-        </constraints>
-      </hspacer>
-      <vspacer id="96790">
-        <constraints>
-          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-          <gridbag weightx="0.0" weighty="0.0"/>
-        </constraints>
-      </vspacer>
       <component id="4e669" class="javax.swing.JList" binding="list1" default-binding="true">
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="2" anchor="0" fill="3" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="50"/>
           </grid>
-          <gridbag top="0" left="0" bottom="20" right="100" weightx="0.0" weighty="0.0"/>
         </constraints>
-        <properties/>
+        <properties>
+          <dropMode value="ON"/>
+          <enabled value="true"/>
+          <model>
+            <item value="sad"/>
+            <item value="asd"/>
+            <item value="asd"/>
+            <item value="asd"/>
+            <item value="asdas"/>
+            <item value="d"/>
+            <item value="asd"/>
+            <item value="as"/>
+            <item value="d"/>
+            <item value="asd"/>
+            <item value="as"/>
+          </model>
+        </properties>
       </component>
-      <component id="93aff" class="javax.swing.JFormattedTextField" binding="asFormattedTextField" default-binding="true">
+      <component id="93aff" class="javax.swing.JFormattedTextField" binding="sdasdsadFormattedTextField" default-binding="true">
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
-          <gridbag weightx="0.0" weighty="0.0"/>
         </constraints>
         <properties>
-          <text value="as"/>
+          <text value="sdasdsad"/>
         </properties>
       </component>
     </children>
