--- a/mocksocks-gui/src/main/java/com/dianping/mocksocks/gui/Main.form
+++ b/mocksocks-gui/src/main/java/com/dianping/mocksocks/gui/Main.form
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.dianping.mocksocks.gui.Main">
-  <grid id="27dc6" binding="panel" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-    <margin top="0" left="0" bottom="0" right="0"/>
+  <grid id="27dc6" binding="panel" layout-manager="FormLayout">
+    <rowspec value="center:max(d;4px):noGrow"/>
+    <rowspec value="top:3dlu:noGrow"/>
+    <rowspec value="center:d:grow"/>
+    <colspec value="fill:d:grow"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="399"/>
+      <xy x="20" y="20" width="644" height="474"/>
     </constraints>
     <properties>
       <enabled value="false"/>
@@ -14,9 +17,10 @@
     <children>
       <component id="4e669" class="javax.swing.JList" binding="list1" default-binding="true">
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="2" anchor="0" fill="3" indent="0" use-parent-layout="false">
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="2" anchor="0" fill="3" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="50"/>
           </grid>
+          <forms defaultalign-vert="false"/>
         </constraints>
         <properties>
           <dropMode value="ON"/>
@@ -41,6 +45,7 @@
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
+          <forms defaultalign-horz="false"/>
         </constraints>
         <properties>
           <text value="sdasdsad"/>
