--- a/mocksocks-gui/src/main/java/com/dianping/mocksocks/gui/Main.form
+++ b/mocksocks-gui/src/main/java/com/dianping/mocksocks/gui/Main.form
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.dianping.mocksocks.gui.Main">
   <grid id="27dc6" binding="panel" layout-manager="FormLayout">
-    <rowspec value="center:max(d;4px):noGrow"/>
-    <rowspec value="top:3dlu:noGrow"/>
     <rowspec value="center:d:grow"/>
     <colspec value="fill:d:grow"/>
     <constraints>
-      <xy x="20" y="20" width="644" height="474"/>
+      <xy x="20" y="20" width="800" height="600"/>
     </constraints>
     <properties>
       <enabled value="false"/>
+      <minimumSize width="800" height="600"/>
+      <name value="MockSocks"/>
+      <preferredSize width="1280" height="800"/>
     </properties>
     <border type="line">
       <color color="-16777216"/>
@@ -17,7 +18,7 @@
     <children>
       <component id="4e669" class="javax.swing.JList" binding="list1" default-binding="true">
         <constraints>
-          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="2" anchor="0" fill="3" indent="0" use-parent-layout="false">
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="2" anchor="0" fill="3" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="50"/>
           </grid>
           <forms defaultalign-vert="false"/>
@@ -26,29 +27,12 @@
           <dropMode value="ON"/>
           <enabled value="true"/>
           <model>
-            <item value="sad"/>
-            <item value="asd"/>
-            <item value="asd"/>
-            <item value="asd"/>
-            <item value="asdas"/>
-            <item value="d"/>
-            <item value="asd"/>
-            <item value="as"/>
-            <item value="d"/>
-            <item value="asd"/>
-            <item value="as"/>
+            <item value="ConnectionStatus{remote=/112.124.5.74:80,startTime=23:09:38/494, endTime=23:09:38/732, timeCost=238ms, bytesSend=0, bytesReceive=95.52K, status=closed}"/>
+            <item value="ConnectionStatus{remote=/112.124.5.74:80,startTime=23:09:38/494, endTime=23:09:38/732, timeCost=238ms, bytesSend=0, bytesReceive=95.52K, status=closed}"/>
+            <item value="ConnectionStatus{remote=/112.124.5.74:80,startTime=23:09:38/494, endTime=23:09:38/732, timeCost=238ms, bytesSend=0, bytesReceive=95.52K, status=closed}"/>
+            <item value="ConnectionStatus{remote=/112.124.5.74:80,startTime=23:09:38/494, endTime=23:09:38/732, timeCost=238ms, bytesSend=0, bytesReceive=95.52K, status=closed}"/>
+            <item value="ConnectionStatus{remote=/112.124.5.74:80,startTime=23:09:38/494, endTime=23:09:38/732, timeCost=238ms, bytesSend=0, bytesReceive=95.52K, status=closed}"/>
           </model>
-        </properties>
-      </component>
-      <component id="93aff" class="javax.swing.JFormattedTextField" binding="sdasdsadFormattedTextField" default-binding="true">
-        <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
-          </grid>
-          <forms defaultalign-horz="false"/>
-        </constraints>
-        <properties>
-          <text value="sdasdsad"/>
         </properties>
       </component>
     </children>
