--- a/mocksocks-gui/src/main/java/com/dianping/mocksocks/gui/gui/Main.form
+++ b/mocksocks-gui/src/main/java/com/dianping/mocksocks/gui/gui/Main.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.dianping.mocksocks.gui.Main">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.dianping.mocksocks.gui.gui.Main">
   <grid id="27dc6" binding="panel" layout-manager="FormLayout">
     <rowspec value="center:max(d;4px):noGrow"/>
     <rowspec value="top:3dlu:noGrow"/>
