add pannel for message

--- a/mocksocks-gui/src/main/java/com/dianping/mocksocks/gui/gui/Main.form
+++ b/mocksocks-gui/src/main/java/com/dianping/mocksocks/gui/gui/Main.form
@@ -5,6 +5,8 @@
     <rowspec value="top:3dlu:noGrow"/>
     <rowspec value="center:max(d;4px):noGrow"/>
     <rowspec value="top:3dlu:noGrow"/>
+    <rowspec value="center:max(d;4px):noGrow"/>
+    <rowspec value="top:141dlu:noGrow"/>
     <rowspec value="center:d:grow"/>
     <colspec value="fill:d:grow"/>
     <constraints>
@@ -20,30 +22,6 @@
       <color color="-16777216"/>
     </border>
     <children>
-      <scrollpane id="6d192">
-        <constraints>
-          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-          <forms defaultalign-horz="false" defaultalign-vert="false"/>
-        </constraints>
-        <properties/>
-        <border type="none"/>
-        <children>
-          <component id="4e669" class="javax.swing.JList" binding="list1" default-binding="true">
-            <constraints/>
-            <properties>
-              <dropMode value="ON"/>
-              <enabled value="true"/>
-              <model>
-                <item value="ConnectionStatus{remote=/112.124.5.74:80,startTime=23:09:38/494, endTime=23:09:38/732, timeCost=238ms, bytesSend=0, bytesReceive=95.52K, status=closed}"/>
-                <item value="ConnectionStatus{remote=/112.124.5.74:80,startTime=23:09:38/494, endTime=23:09:38/732, timeCost=238ms, bytesSend=0, bytesReceive=95.52K, status=closed}"/>
-                <item value="ConnectionStatus{remote=/112.124.5.74:80,startTime=23:09:38/494, endTime=23:09:38/732, timeCost=238ms, bytesSend=0, bytesReceive=95.52K, status=closed}"/>
-                <item value="ConnectionStatus{remote=/112.124.5.74:80,startTime=23:09:38/494, endTime=23:09:38/732, timeCost=238ms, bytesSend=0, bytesReceive=95.52K, status=closed}"/>
-                <item value="ConnectionStatus{remote=/112.124.5.74:80,startTime=23:09:38/494, endTime=23:09:38/732, timeCost=238ms, bytesSend=0, bytesReceive=95.52K, status=closed}"/>
-              </model>
-            </properties>
-          </component>
-        </children>
-      </scrollpane>
       <grid id="8f9d5" layout-manager="GridLayoutManager" row-count="2" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
@@ -129,6 +107,66 @@
           </component>
         </children>
       </grid>
+      <tabbedpane id="1b1d4" binding="tabbedPane1" default-binding="true">
+        <constraints>
+          <grid row="4" column="0" row-span="3" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
+            <preferred-size width="200" height="200"/>
+          </grid>
+          <forms/>
+        </constraints>
+        <properties/>
+        <border type="none"/>
+        <children>
+          <grid id="de9fd" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+            <margin top="0" left="0" bottom="0" right="0"/>
+            <constraints>
+              <tabbedpane title="Connections"/>
+            </constraints>
+            <properties/>
+            <border type="none"/>
+            <children>
+              <scrollpane id="6d192">
+                <constraints>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties/>
+                <border type="none"/>
+                <children>
+                  <component id="4e669" class="javax.swing.JList" binding="listConnection">
+                    <constraints/>
+                    <properties>
+                      <dropMode value="ON"/>
+                      <enabled value="true"/>
+                      <model>
+                        <item value="ConnectionStatus{remote=/112.124.5.74:80,startTime=23:09:38/494, endTime=23:09:38/732, timeCost=238ms, bytesSend=0, bytesReceive=95.52K, status=closed}"/>
+                        <item value="ConnectionStatus{remote=/112.124.5.74:80,startTime=23:09:38/494, endTime=23:09:38/732, timeCost=238ms, bytesSend=0, bytesReceive=95.52K, status=closed}"/>
+                        <item value="ConnectionStatus{remote=/112.124.5.74:80,startTime=23:09:38/494, endTime=23:09:38/732, timeCost=238ms, bytesSend=0, bytesReceive=95.52K, status=closed}"/>
+                        <item value="ConnectionStatus{remote=/112.124.5.74:80,startTime=23:09:38/494, endTime=23:09:38/732, timeCost=238ms, bytesSend=0, bytesReceive=95.52K, status=closed}"/>
+                        <item value="ConnectionStatus{remote=/112.124.5.74:80,startTime=23:09:38/494, endTime=23:09:38/732, timeCost=238ms, bytesSend=0, bytesReceive=95.52K, status=closed}"/>
+                      </model>
+                    </properties>
+                  </component>
+                </children>
+              </scrollpane>
+            </children>
+          </grid>
+          <scrollpane id="91776">
+            <constraints>
+              <tabbedpane title="Message"/>
+            </constraints>
+            <properties/>
+            <border type="none"/>
+            <children>
+              <component id="dfe09" class="javax.swing.JList" binding="listMessage">
+                <constraints/>
+                <properties>
+                  <model/>
+                </properties>
+              </component>
+            </children>
+          </scrollpane>
+        </children>
+      </tabbedpane>
     </children>
   </grid>
 </form>
