--- a/mocksocks-gui/src/main/java/com/dianping/mocksocks/gui/gui/Main.form
+++ b/mocksocks-gui/src/main/java/com/dianping/mocksocks/gui/gui/Main.form
@@ -22,46 +22,6 @@
       <color color="-16777216"/>
     </border>
     <children>
-      <grid id="8f9d5" layout-manager="GridLayoutManager" row-count="2" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-        <margin top="0" left="0" bottom="0" right="0"/>
-        <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-          <forms/>
-        </constraints>
-        <properties/>
-        <border type="none"/>
-        <children>
-          <vspacer id="61989">
-            <constraints>
-              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-            </constraints>
-          </vspacer>
-          <component id="e607c" class="javax.swing.JButton" binding="startButton" default-binding="true">
-            <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <text value="Start"/>
-            </properties>
-          </component>
-          <component id="36216" class="javax.swing.JButton" binding="stopButton" default-binding="true">
-            <constraints>
-              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <text value="Stop"/>
-            </properties>
-          </component>
-          <component id="e1535" class="javax.swing.JButton" binding="clearButton" default-binding="true">
-            <constraints>
-              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <text value="Clear"/>
-            </properties>
-          </component>
-        </children>
-      </grid>
       <grid id="eafa0" layout-manager="GridLayoutManager" row-count="1" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
@@ -167,6 +127,45 @@
           </scrollpane>
         </children>
       </tabbedpane>
+      <toolbar id="d592c" binding="toolBar">
+        <constraints>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="-1" height="20"/>
+          </grid>
+          <forms defaultalign-horz="false"/>
+        </constraints>
+        <properties>
+          <borderPainted value="true"/>
+          <floatable value="false"/>
+          <font/>
+          <margin top="0" left="0" bottom="0" right="0"/>
+          <orientation value="0"/>
+        </properties>
+        <border type="none"/>
+        <children>
+          <component id="e607c" class="javax.swing.JButton" binding="startButton" default-binding="true">
+            <constraints/>
+            <properties>
+              <icon value="icon/arrow-right-3.png"/>
+              <text value="Start"/>
+            </properties>
+          </component>
+          <component id="36216" class="javax.swing.JButton" binding="stopButton" default-binding="true">
+            <constraints/>
+            <properties>
+              <icon value="icon/media-playback-stop.png"/>
+              <text value="Stop"/>
+            </properties>
+          </component>
+          <component id="e1535" class="javax.swing.JButton" binding="clearButton" default-binding="true">
+            <constraints/>
+            <properties>
+              <icon value="icon/edit-delete-2.png"/>
+              <text value="Clear"/>
+            </properties>
+          </component>
+        </children>
+      </toolbar>
     </children>
   </grid>
 </form>
