--- a/mocksocks-gui/src/main/java/com/dianping/mocksocks/gui/gui/MessageDetailDialog.form
+++ b/mocksocks-gui/src/main/java/com/dianping/mocksocks/gui/gui/MessageDetailDialog.form
@@ -74,34 +74,109 @@
                 <properties/>
                 <border type="none"/>
                 <children>
-                  <scrollpane id="9d466">
+                  <tabbedpane id="63e00" binding="requestTab">
                     <constraints>
-                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                        <preferred-size width="200" height="200"/>
+                      </grid>
                     </constraints>
-                    <properties/>
+                    <properties>
+                      <tabPlacement value="3"/>
+                    </properties>
                     <border type="none"/>
                     <children>
-                      <component id="1da8f" class="javax.swing.JEditorPane" binding="editorRequest">
-                        <constraints/>
+                      <grid id="d9eb0" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                        <margin top="0" left="0" bottom="0" right="0"/>
+                        <constraints>
+                          <tabbedpane title="Text"/>
+                        </constraints>
                         <properties/>
-                      </component>
+                        <border type="none"/>
+                        <children>
+                          <scrollpane id="d0433">
+                            <constraints>
+                              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                            </constraints>
+                            <properties/>
+                            <border type="none"/>
+                            <children>
+                              <component id="55352" class="javax.swing.JEditorPane" binding="editorRequest">
+                                <constraints/>
+                                <properties>
+                                  <text value=""/>
+                                </properties>
+                              </component>
+                            </children>
+                          </scrollpane>
+                        </children>
+                      </grid>
+                      <scrollpane id="74e9f">
+                        <constraints>
+                          <tabbedpane title="Hex"/>
+                        </constraints>
+                        <properties/>
+                        <border type="none"/>
+                        <children>
+                          <component id="da24e" class="javax.swing.JEditorPane" binding="editorRequestHex">
+                            <constraints/>
+                            <properties/>
+                          </component>
+                        </children>
+                      </scrollpane>
                     </children>
-                  </scrollpane>
+                  </tabbedpane>
                 </children>
               </grid>
-              <scrollpane id="3a4d2">
+              <grid id="e34ff" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                <margin top="0" left="0" bottom="0" right="0"/>
                 <constraints>
                   <tabbedpane title="Response"/>
                 </constraints>
                 <properties/>
                 <border type="none"/>
                 <children>
-                  <component id="dcdaa" class="javax.swing.JEditorPane" binding="editorResponse">
-                    <constraints/>
-                    <properties/>
-                  </component>
+                  <tabbedpane id="71c69" binding="responseTab">
+                    <constraints>
+                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                        <preferred-size width="200" height="200"/>
+                      </grid>
+                    </constraints>
+                    <properties>
+                      <tabPlacement value="3"/>
+                    </properties>
+                    <border type="none"/>
+                    <children>
+                      <grid id="9002" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                        <margin top="0" left="0" bottom="0" right="0"/>
+                        <constraints>
+                          <tabbedpane title="Text"/>
+                        </constraints>
+                        <properties/>
+                        <border type="none"/>
+                        <children>
+                          <scrollpane id="226c6">
+                            <constraints>
+                              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                            </constraints>
+                            <properties/>
+                            <border type="none"/>
+                            <children>
+                              <component id="82120" class="javax.swing.JEditorPane" binding="editorResponse">
+                                <constraints/>
+                                <properties>
+                                  <opaque value="false"/>
+                                  <preferredSize width="628" height="16"/>
+                                  <text value=""/>
+                                </properties>
+                              </component>
+                            </children>
+                          </scrollpane>
+                        </children>
+                      </grid>
+                    </children>
+                  </tabbedpane>
                 </children>
-              </scrollpane>
+              </grid>
             </children>
           </tabbedpane>
         </children>
