--- a/mocksocks-gui/src/main/java/com/dianping/mocksocks/gui/gui/MessageDetailDialog.form
+++ b/mocksocks-gui/src/main/java/com/dianping/mocksocks/gui/gui/MessageDetailDialog.form
@@ -7,6 +7,8 @@
     </constraints>
     <properties>
       <font/>
+      <preferredSize width="680" height="480"/>
+      <requestFocusEnabled value="true"/>
     </properties>
     <border type="none"/>
     <children>
