--- a/mocksocks-gui/src/main/java/com/dianping/mocksocks/gui/gui/MessageDetailDialog.form
+++ b/mocksocks-gui/src/main/java/com/dianping/mocksocks/gui/gui/MessageDetailDialog.form
@@ -127,6 +127,7 @@
                           <component id="da24e" class="javax.swing.JEditorPane" binding="editorRequestHex">
                             <constraints/>
                             <properties>
+                              <editable value="false"/>
                               <font name="Courier"/>
                             </properties>
                           </component>
@@ -192,6 +193,7 @@
                           <component id="6d877" class="javax.swing.JEditorPane" binding="editorResponseHex">
                             <constraints/>
                             <properties>
+                              <editable value="false"/>
                               <font name="Courier"/>
                             </properties>
                           </component>
